--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		        <dependency>
+            <groupId>jakarta.servlet</groupId>
+            <artifactId>jakarta.servlet-api</artifactId>
+        </dependency>
+        
 	</dependencies>
 
 	<build>
